syntax = "proto3";
package proto.store.service;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option java_multiple_files = true;
option java_package = "proto.store.service";

service StoreService {

    rpc GetStoreByType (GetStoreByTypeRequest) returns (GetStoresResponse) {
    }

    rpc GeAllStores (GetStoresRequest) returns (GetStoresResponse) {
    }

    rpc CreateStore (CreateStoreRequest) returns (CreatedStoreResponse) {
    }

    rpc GetStoreById (GetStoreByIdRequest) returns (GetStoreResponse) {
    }

    rpc UpdateStore (Store) returns (UpdateStoreResponse) {
    }

    rpc DeleteStore (DeleteStoreByIdRequest) returns (DeleteStoreResponse) {
    }

}

// REQUEST
message GetStoreByIdRequest {
    google.protobuf.StringValue id = 1;
}

message GetStoresRequest {
}

message GetStoreByTypeRequest {
    Type type = 1;
}

message CreateStoreRequest {
    Store store = 1;
}

message DeleteStoreByIdRequest {
    google.protobuf.StringValue id = 1;
}

message UpdateStoreRequest {
    Store store = 1;
}

// RESPONSE
message GetStoresResponse {
    Stores stores = 1;
}

message GetStoreResponse {
    Store store = 1;
}

message CreatedStoreResponse {
}

message DeleteStoreResponse {
}

message UpdateStoreResponse {
}

// MODEL
message Stores {
    repeated Store stores = 1 [packed = false];
}

message Store {
    google.protobuf.StringValue description = 1;
    google.protobuf.StringValue id = 2;
    google.protobuf.StringValue name = 3;
    map<string, Hours> openingHours = 4;
    google.protobuf.StringValue phoneNo = 5;
    Type storeType = 6;
}

enum Type {
    ACCESSORIES = 0;
    LEISURE = 1;
    BOOKS_MEDIA_ELECTRONICS = 3;
    HEALTH_BEAUTY = 4;
    OPTICIAN = 5;
    HOME_DECORATION = 6;
    TOYS_HOBBY = 7;
    GROCERIES = 8;
    RESTAURANT_CAFE = 9;
    JEWELLERY = 10;
    STAND = 11;
    FASHION = 12;
    SERVICE = 13;
    SPORTS = 14;
    UNKOWN = 15;
}

message Hours {
    google.protobuf.Timestamp opening = 1;
    google.protobuf.Timestamp closing = 2;
}

enum DayOfWeek {
    MONDAY = 0;
    TUESDAY = 1;
    WEDNESDAY = 2;
    THURSDAY = 3;
    FRIDAY = 4;
    SATURDAY = 5;
    SUNDAY = 6;
}
