syntax = "proto3";
package proto.store.service;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "google/api/annotations.proto";

option java_multiple_files = true;
option java_package = "proto.store.service";

service StoreService {

  rpc GetStoreByType (GetStoreByTypeRequest) returns (GetStoresResponse) {
    option (google.api.http) = {
      get: "/store-service/type/{type}"
    };
  }

  rpc GetAllStores (GetAllStoresRequest) returns (GetStoresResponse) {
    option (google.api.http) = {
      get: "/store-service"
    };
  }

  rpc CreateStore (CreateStoreRequest) returns (CreatedStoreResponse) {
    option (google.api.http) = {
      post: "/store-service"
      body : "store"
    };
  }

  rpc GetStoreByName (GetStoreByNameRequest) returns (GetStoreResponse) {
    option (google.api.http) = {
      get: "/store-service/name/{name}"
    };
  }

  rpc UpdateStore (UpdateStoreRequest) returns (UpdateStoreResponse) {
    option (google.api.http) = {
      put: "/store-service/{id}"
      body : "store"
    };
  }

  rpc DeleteStore (DeleteStoreByIdRequest) returns (DeleteStoreResponse) {
    option (google.api.http) = {
      delete: "/store-service/{id}"
    };
  }
}

message GetStoreByNameRequest {
  string name = 1;
}

message GetAllStoresRequest {
}

message GetStoreByTypeRequest {
  Store.Type storeType = 1;
}

message CreateStoreRequest {
  Store store = 1;
}

message UpdateStoreRequest {
  string id = 1;
  Store store = 2;
}

message DeleteStoreByIdRequest {
  string id = 1;
}

message GetStoresResponse {
  Stores stores = 1;
  Response response = 2;
}

message GetStoreResponse {
  Store store = 1;
  Response response = 2;
}

message CreatedStoreResponse {
  Response response = 1;
}

message DeleteStoreResponse {
  Response response = 1;
}

message UpdateStoreResponse {
  Store update = 1;
  Response response = 2;
}

message Response {
  int32 status = 1;
  string message = 2;
}

message Stores {
  repeated Store stores = 1 [packed = false];
}

message Store {
  Coordinates coordinates = 1;
  string description = 2;
  string id = 3;
  string name = 4;
  map<string, OpeningHours> hours = 5;
  string phoneNo = 6;
  Type type = 7;

  message Coordinates {
    int64 longitude = 1;
    int64 latitude = 2;
  }

  message OpeningHours {
    google.protobuf.Timestamp opening = 1;
    google.protobuf.Timestamp closing = 2;
  }

  enum Type {
    ACCESSORIES = 0;
    BOOKS_MEDIA_ELECTRONIC = 1;
    FASHION = 2;
    GROCERIES = 3;
    HEALTH_BEAUTY = 4;
    HOME_DECORATION = 5;
    JEWELLERY = 6;
    LEISURE = 7;
    OPTICIAN = 8;
    RESTAURANT_CAFE = 9;
    SERVICE = 10;
    SPORTS = 11;
    STAND = 12;
    TOYS_HOBBY = 13;
    UNKNOWN = 14;
  }
}

message StoreSearchEvent {
  string name = 1;
  google.protobuf.Timestamp time = 2;
}